proj1/tests/correct/subscript1.py
x = 0
l = [1, 2, 3]
print l[x]
