proj1/tests/error/targetList2.py
l = [0]
l[0 = 10
print l[0]

